refonte CSS admin + correction overflow +

--- a/code/public/assets/css/gererAdmin.css
+++ b/code/public/assets/css/gererAdmin.css
@@ -1,22 +1,21 @@
-.topBoxUsr{
+.topBoxAdmin{
     display: flex;
     justify-content: space-around;
     align-items: center;
     background-color: #4e2f83;
     color: #FFFFFF;
     border-radius: 15px;
-    position: fixed;
-    width: calc(100% - 16.625em);
 }
 
-.topBoxUsr button{
+.topBoxAdmin button{
     padding: 10px;
     border: none;
     border-radius: 15px;
     transition: 0.3s;
 }
-.topBoxUsr button:hover{
-    padding: 11px;
+.topBoxAdmin button:hover{
+    scale: 1.1;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .check{
@@ -29,11 +28,10 @@
     flex-direction: column;
     border: #222528;
     padding: 30px;
-    margin-top: 85px;
     border-radius: 15px;
 }
 
-.userElement{
+.Element{
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -42,7 +40,7 @@
     border-radius: 20px;
 }
 
-.btnUser{
+.btnManage{
     padding: 10px;
     border: none;
     border-radius: 15px;
@@ -51,8 +49,9 @@
     transition: 0.3s;
 }
 
-.btnUser:hover{
-    padding: 11px;
+.btnManage:hover{
+    scale: 1.1;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .formAdmin{
@@ -161,5 +160,17 @@ input[type="submit"]:hover{
 input::file-selector-button:hover{
     background-color: #8661c7;
     color: #FFFFFF;
-    border-color: #FFFFFF;
+}
+
+.deleteBtn{
+    border: none;
+    background-color: #4e2f83;
+    color: #FFFFFF;
+    border-radius: 10px;
+    padding: 10px;
+    font-size: large;
+    transition: 0.3s;
+    text-decoration: none;
+    text-align: center;
+    width: 20%;
 }
